<resources>
    <string name="app_name">P9A11y</string>


   <!--cas 1-->
    <string name="cas_1">Cas 1 :</string>
    <string name="cas_1_bouton_d_ajout_au_panier">ajout quantité</string>
    <string name="cas_1_compteur_quantité">Compteur de quantité</string>
    <string name="cas_1_bouton_de_suppression_du_panier">suppression quantité</string>
    <string name="impossible_d_avoir_une_quantit_n_gative">Impossible d\'avoir une quantité négative</string>
    <string name="demo_product_name">Nom du produit</string>
    <string name="cas_1_lire_quantité">Quantité : %1$d</string>

    <!--cas 2-->
    <string name="cas_2">Cas 2 :</string>
    <string name="cas_2_carte_de_suggestion_de_recettes">Cas 2 : Carte de suggestion de recettes</string>
    <string name="cd_ajouter_aux_favoris">Ajouter aux favoris</string>
    <string name="cas_supprimer_des_favoris">Supprimer des favoris</string>
    <string name="ajouter">Ajouter au panier</string>
    <string name="demo_cookie_text">Cookies au chocolat</string>
    <string name="recette_ajout_au_panier">Recette ajoutée au panier</string>

    <!--Cas 3-->
    <string name="cas_3">Cas 3 :</string>
    <string name="cas_3_pseudo">Pseudonyme :</string>
    <string name="cas_3_formulaire_de_connexion">Cas 3: Formulaire de connexion</string>
    <string name="cas_3_saisie_pseudonyme">tapez votre pseudo avec 3 caractères minimum"</string>
    <string name="cas_3_validate">Valider</string>
    <string name="cas_3_pseudo_court">le pseudo doit avoir au moins trois caractères, il en a %d</string>


</resources>