<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Case3Activity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/screenTitle"
        android:contentDescription="@string/cas_3_formulaire_de_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cas_3"
        style="@style/TextAppearance.MaterialComponents.Headline2"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        android:id="@+id/pseudoText"
        android:importantForAccessibility="no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cas_3_pseudo"
        style="@style/TextAppearance.MaterialComponents.Body1"

        />

    <EditText
        android:id="@+id/pseudoEdit"
        android:contentDescription="@string/cas_3_saisie_pseudonyme"
        android:autofillHints="username"
        android:minHeight="48.dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <Button
        android:id="@+id/validateButton"
        android:contentDescription="@string/cas_3_validate"
        android:minWidth="48.dp"
        android:minHeight="48.dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cas_3_validate"
        android:enabled="true"/>

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/red400"
        android:visibility="invisible"
        android:importantForAccessibility="no"/>

</LinearLayout>