<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Case1Activity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cas_1"
        android:textSize="40sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/beige"
        android:minHeight="90dp"
        android:padding="4dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/demo_product_name"
            android:textSize="60px"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/removeButton"
            android:minWidth="48.dp"
            android:minHeight="48.dp"
            android:contentDescription="@string/cas_1_bouton_de_suppression_du_panier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_remove" />

        <TextView
            android:id="@+id/quantityText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:accessibilityLiveRegion="polite"
            android:textColor="@color/black"
            android:textSize="60px"
            tools:text="0" />

        <ImageButton
            android:id="@+id/addButton"
            android:minWidth="48.dp"
            android:minHeight="48.dp"
            android:contentDescription="@string/cas_1_bouton_d_ajout_au_panier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            />


    </LinearLayout>

</LinearLayout>